# favkitchen

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routers/: __init__.py  activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
app/caching/: memory.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: base.py  enums.py  models.py
app/repositories/: activity_repository.py  base.py  contact_repository.py  deal_repository.py  organization_repository.py  task_repository.py  user_repository.py
app/schemas/: activity.py  analytics.py  auth.py  contact.py  deal.py  organization.py  task.py  user.py
app/services/: activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
tests/: conftest.py  test_deal_rules.py  test_full_flow.py
