[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-crm"
version = "0.1.0"
description = "Multi-tenant mini CRM backend built with FastAPI"
authors = [{name = "Codex"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.28",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.2"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
